--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,7 +11,7 @@
   </div>
 </nav>
 <body>
-  <h2> All Ideas </h2>
+  <h2> All The Ideas 🍙🐼 </h2>
     <div class="row">
       <div class="col s4 m9 l4">
         <div id="index">
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="input-field col l3">
           <input type="text" class="validate" id='idea-name'>
-          <label class="active" for="first_name2">Name</label>
+          <label class="active" for="first_name2">Title</label>
         </div>
 
 
@@ -31,7 +31,7 @@
       </div>
 
       <div class="input-field col l3">
-        <button class="btn waves-effect waves-light" type="submit" name="action" id='create-idea'>Submit
+        <button class="btn waves-effect waves-light" type="submit" name="action" id='create-idea'>Save!
         </button>
       </div>
       </div>
