--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,7 @@
   <div class="nav-wrapper">
     <form>
       <div class="input-field">
-        <input id="search" type="search" required>
+        <input id="search" type="search" placeholder="search"required>
 
         <label for="search"><i class="material-icons"></i></label>
         <i class="material-icons">close</i>
